# vapoursynth-descale

./: .clang-format  meson.build
.github/workflows/: release.yml  windows.yml
include/: descale.h
src/: avsplugin.c  avsplugin.cpp  descale.c  descale.rc.in  plugin.h
src/x86/: descale_avx2.c
subprojects/: avisynth_headers.wrap  avs_c_api_loader.wrap
subprojects/packagefiles/avisynth_headers/: meson.build
subprojects/packagefiles/avs_c_api_loader/: meson.build
subprojects/packagefiles/avs_c_api_loader/src/: meson.build
